name:                get-data-from-url
version:             0.1.0.0
synopsis:            Get data from URL
description:         Please see README.md
homepage:            http://github.com/FranklinChen/get-data-from-url-haskell
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           2015
category:            test
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

executable get-data-from-url
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , lens-aeson
                     , text

source-repository head
  type:                 git
  location:             https://github.com/FranklinChen/get-data-from-url-haskell
